[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Fonts/Cave-Story.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Audio_Settings.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[node name="Audio_Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
selected_bus = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 976.0
margin_bottom = 40.0
custom_constants/separation = 42
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Audio_Name_Label" type="Label" parent="HBoxContainer"]
margin_top = 10.0
margin_right = 300.0
margin_bottom = 30.0
rect_min_size = Vector2( 300, 0 )
custom_fonts/font = SubResource( 1 )
text = "Master Volume"

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
margin_left = 342.0
margin_right = 346.0
margin_bottom = 40.0

[node name="HSlider" type="HSlider" parent="HBoxContainer"]
margin_left = 388.0
margin_right = 588.0
margin_bottom = 32.0
rect_min_size = Vector2( 200, 32 )
max_value = 1.0
step = 0.001

[node name="VSeparator2" type="VSeparator" parent="HBoxContainer"]
margin_left = 630.0
margin_right = 634.0
margin_bottom = 40.0

[node name="Audio_Num_Label" type="Label" parent="HBoxContainer"]
margin_left = 676.0
margin_top = 10.0
margin_right = 976.0
margin_bottom = 30.0
rect_min_size = Vector2( 300, 0 )
custom_fonts/font = SubResource( 2 )
text = "99.2"

[connection signal="value_changed" from="HBoxContainer/HSlider" to="." method="_on_HSlider_value_changed"]
